Make theme toggle unselectable

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
             font-size: large;
             filter: grayscale(1);
+
+            user-select: none;
         }
 
         footer {
